# UdaanHER_Saathi

./: .env.example  .gitignore  README.md  render.yaml
backend/: pyproject.toml
backend/app/: config.py  errors.py  main.py  middleware.py
backend/app/agent/: graph.py  guards.py  llm_utils.py  state.py  teaching_utils.py
backend/app/agent/nodes/: __init__.py  assess.py  choose_language.py  close.py  confirm_profile.py  discover.py  earn.py  greet.py  practice.py  resume.py  reteach.py  teach.py  viva.py  wrapup.py
backend/app/agent/prompts/: assess.md  confirm_profile.md  discover.md  earn.md  greet.md  practice.md  resume.md  reteach.md  teach.md  viva.md  wrapup.md
backend/app/content/: builder.py  loader.py  store.py  visuals.py
backend/app/models/: api.py  db.py  ui.py
backend/app/services/: llm.py  stt.py  timing.py  tts.py
backend/scripts/: build_skill.py  live_full_session_transcript.py  live_onboarding_transcript.py  live_returning_session_transcript.py  seed_demo.py  smoke_openai.py  smoke_sarvam.py
backend/tests/: test_agent_graph.py  test_content_store.py  test_db.py  test_health.py  test_onboarding.py  test_session_and_progress.py  test_stt.py  test_teaching_stages.py  test_tts.py  test_turn.py  test_ui.py
docs/: app_plan_v2.md  curriculum_plan.md  decisions.md
docs/transcripts/: full_session_gu-IN.md  full_session_hi-IN.md  onboarding_gu-IN.md  onboarding_hi-IN.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
input_files/: app_plan_v2.tex  mvp_tasks.tex  spec_driven_task.tex  udaan_her_sathi_mvp_plan.tex
(+34 files in other folders)
