[project]
name = "udaanher-saathi-backend"
version = "0.1.0"
description = "UdaanHer Saathi MVP backend: FastAPI harness around Sarvam (voice) and OpenAI (reasoning) behind a LangGraph mentor agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "openai>=1.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
